src/projects.scss
/* ... */
.xmark{
	position:absolute;
	@include positions( 20px,5%);
	svg{
		path{
			stroke:rgba(0,0,0,0.4);
			stroke-width: 2px;
		}
	}
	cursor: pointer;
}
.member{
	text-decoration: underline;
	color:inherit;
}
a.member{
	width:auto;
	margin:0;
}
.imgdes{
	a{
	margin:0;
	@include sizes(auto);
}
}
.enttitle {
	position:relative;
	display: flex;
	justify-content: space-between;
	font: {
		size: 24px;
		weight:500;
	}
	@include textcolors;
	@include sizes(100%);
	padding: 30px 5% 20px;
	&.dote{
		border-bottom:2px dashed $dote;
	}
	&.logpos{
		border-bottom:2px dashed $logpos;
	}
	&.even{
		border-bottom:2px dashed $even;
	}
	&.reporter{
		border-bottom:2px dashed $reporter;
	}
	&.gssh{
		border-bottom:2px dashed #eee;
	}
	&.momo{
		border-bottom:2px dashed $momo;
	}
	&.naoshima{
		border-bottom: 2px dashed $naoshima;
	}
	&.getcuisine{
		border-bottom: 2px dashed $getcuisine;
	}
	&.up{
		border-bottom: 2px dashed $up;
	}
	&.forkie{
		border-bottom: 2px dashed $forkie;
	}
	&.buncee{
		border-bottom: 2px dashed $bc;
	}
}
.sectitle {
	text-align: left;
	@include sizes(95%,null,750px);
	@include transform(translateX(-20px));
	font: {
		size: 24px;
		weight: 700;
	}
	@include textcolors;
	margin: 150px auto 20px;
	text-transform: uppercase;
	letter-spacing: 3px;
}
.title {
	@include textcolors;
	@include sizes(95%,null,750px);
	font: {
		size:17px;
		weight: bold;
	}
	letter-spacing: .5px;
	margin: 0 auto 5px;

}
@media screen and (max-width:830px){
	.sectitle{
		@include transform(none);
	}
}
.bar {
	opacity: 1;
	@include sizes(40px, 2px);
	margin: 9px 0 0;
	@include bgcolors;
}

.solution {
	margin: 10px 0 10px 10px;
	list-style: initial;
	margin-bottom: 24px;
}
.imgdes {
	font: {
		size: 15px;
		weight: bold;
		style: italic;
	}
	
	text-align: center;
	margin: 10px 0 30px;
	color: rgba(0,0,0,0.5);
	&.solution{
		font-size:16px;
		color:rgba(0,0,0,0.6);
		@include sizes(95%, null, 500px);
		margin:20px auto 60px;
	}
	&.hover{
		margin:0 auto;
	}
	a{
		color:rgba(0,0,0,0.5);
		text-decoration: underline;
	}
	
}


.button {
	@include bgcolors;
	color: white;
	box-shadow: 0 2px 24px rgba(0,0,0,0.3);
	border-radius: 60px;
	padding: 12px 40px;
	font-weight: bold;
	font-size:16px;
	text-transform: uppercase;
	letter-spacing: 1px;
	@include sizes(auto);
	transition: .3s;
	display:inline-block;
	margin: 40px auto 50px;
	cursor: pointer;
	line-height: 1.5;
	&.dote{
		box-shadow: 0 8px 20px rgba(251, 76, 37, 0.5);
	}
	&.reporter{
		box-shadow: 0 8px 20px rgba(214, 179, 5, 0.5);
	}
	&.naoshima{
		box-shadow: 0 8px 20px rgba(214, 149, 5, 0.5);
	}
	&.forkie{
		box-shadow: 0 8px 20px rgba(251, 72, 31, 0.5);
	}
	&.buncee{
		box-shadow:  0 8px 20px rgba(5, 167, 159, 0.5);
	}
	&.up{
		box-shadow: 0 8px 20px rgba(218, 118, 14, 0.5);
	}
	&.blue{
		box-shadow: 0 8px 20px rgba(21, 58, 234, 0.5);
	}
	&:hover {
	transform: translateY(-4px);
	opacity: .8;
	&.dote{
		box-shadow: 0 10px 36px rgba(251, 76, 37, 0.4);
	}
	&.reporter{
		box-shadow: 0 10px 36px rgba(214, 179, 5, 0.4);
	}
	&.naoshima{
		box-shadow: 0 10px 36px rgba(214, 149, 5, 0.4);
	}
	&.forkie{
		box-shadow: 0 10px 36px rgba(251, 72, 31, 0.4);
	}
	&.buncee{
		box-shadow:  0 10px 36px rgba(5, 167, 159, 0.4);
	}
	&.up{
		box-shadow: 0 10px 36px rgba(218, 118, 14, 0.4);
	}
	&.blue{
		box-shadow: 0 10px 36px rgba(21, 58, 234, 0.4);
	}
	&.fa{
		box-shadow: 0 10px 36px rgba(21, 58, 234, 0.4);
	}
	 }

	&:active {
	transform: translateY(2px);
	opacity: 1;
	}
	&.fa{
		text-align:center;
		display:block;
		margin:-140px auto 60px;
		background:#2068b5;
	&:hover{
		background:#3285de;
		opacity:1;
	}
	}
	&.outline{
		background:#fff;
		&.dote{
			border:2px solid $dote;
		}
		&.logpos{
			border:2px solid $logpos;
		}
		&.even{
			border:2px solid $even;
		}
		&.reporter{
			border:2px solid $reporter;
		}
		&.gssh{
			border:2px solid #eee;
		}
		&.momo{
			border:2px solid $momo;
		}
		&.naoshima{
			border: 2px solid $naoshima;
		}
		&.getcuisine{
			border: 2px solid $getcuisine;
		}
		&.forkie{
			border: 2px solid $forkie;
		}
		&.buncee{
			border: 2px solid $bc;
		}
		@include textcolors;
	}

}
@media screen and (max-width:736px){
	.button{
		&.fa{
			height:45px;
			margin-top: -70px;
		}
	}
}
.control{
	position:relative;
	padding:0;
	margin:10px auto;
	@include sizes(90%, null, 500px);
	text-align:center;
	
 img{
	@include sizes(100%);
	padding:0;
	@include positions(0);
	margin:0 auto;
	display:block;
	
}
}
.anim{
	position:absolute;
	@include positions(0,null,null,50%);
	@include transform(translateX(-50%));
	opacity:0;
	cursor:url('images/cursor.svg') 2 2, pointer;	
	&:hover{
	opacity: 1;
	cursor:url('images/cursor.svg') 2 2, pointer;
	}
}
.continuImg{
	@include sizes(null,null,200px);
}
#deactivate{
	@include sizes(null,null,350px);
}
#connected{
	@include sizes(null,null,350px);
}
.animdes{
	text-align:center;

}
/*up*/

/*dote*/
.solu_dote{
	@include sizes(350px !important, null, 90%);
}
// .screens{
// 	img{
// 		width:200px;
// 		max-width:45%;
// 		display:inline-block;
// 	}
// } 
.momoscreen{
	margin:10px;
	margin-bottom:20px;
	@include sizes(null,null,280px);
}
/*even*/
.evensc{
	display:inline-block;
	margin:0 10px;
	img{
		@include sizes(240px,null,100%);
		margin:0 5px;
		display:inline-block;
		box-shadow:0 0 14px rgba(0,0,0,0.2);
	}
}
.before{
	@include sizes(29%);
}
.after{
	@include sizes(61%);
	margin-left:30px;
	img{
		@include sizes(null,null,47%);
		
	}
}

.ori, .impro{
	text-align:center;
	@include sizes(100%);
	font-weight:600;
}
$red: #D65C46;
$blue: #5C83C2;
.ori{
	color: $blue;
}
.impro{
	color:$red;
}
$imgshadow: 0 0 14px rgba(0,0,0,0.2);
.evenwrapper{
	position:relative; 
	display:inline-block; 
	@include sizes(300px,null,98%);
	margin:30px 20px;
	img{
		@include sizes(300px,null,100%);
		box-shadow: $imgshadow;
	}
}
.spot{
	position:absolute; 
	@include sizes(320px); 
	@include positions(null,null,null,-10px);
	box-shadow: $imgshadow;
	z-index: 999;
}
/* ... */

